main page cards grid on mobile fix

--- a/src/components/modules/PopularGrid/PopularGrid.css
+++ b/src/components/modules/PopularGrid/PopularGrid.css
@@ -66,5 +66,15 @@
 @media screen and (max-width: 767px) {
     .popular-grid {
         gap: 5px 5px;
+        grid-template-columns: repeat(3, 1fr);
+        grid-auto-rows: auto;
+        grid-template-areas:
+        'first first third'
+        'fourth second second'
+        'fifth sixth seventh';
+    }
+
+    .popular-grid__item_number_7 {
+        display: block;
     }
 }
